@@ -188,7 +188,7 @@ class ServerGroup
     puts "Copying hosts files..."
 
 gateway_ssh_config = %{
-[ -d .ssh ] || mkdir .ssh
+mkdir -p .ssh
 cat > .ssh/id_rsa <<-EOF_CAT
 #{private_ssh_key}
 EOF_CAT
@@ -196,7 +196,7 @@ chmod 600 .ssh/id_rsa
 cat > .ssh/id_rsa.pub <<-EOF_CAT
 #{public_ssh_key}
 EOF_CAT
-chmod 600 .ssh/id_rsa.pub
+chmod 644 .ssh/id_rsa.pub
 cat > .ssh/config <<-EOF_CAT
 StrictHostKeyChecking no
 EOF_CAT
@@ -204,9 +204,9 @@ chmod 600 .ssh/config
 }
 
 node_ssh_config= %{
-[ -d .ssh ] || mkdir .ssh
-cat > .ssh/authorized_keys <<-EOF_CAT
-#{public_ssh_key}
+mkdir -p .ssh
+cat >> .ssh/authorized_keys <<-EOF_CAT
+#{public_ssh_key}\n
 EOF_CAT
 chmod 600 .ssh/authorized_keys
 }
@@ -222,8 +222,9 @@ hostname "#{server['hostname']}"
 if [ -f /etc/sysconfig/network ]; then
   sed -e "s|^HOSTNAME.*|HOSTNAME=#{server['hostname']}|" -i /etc/sysconfig/network
 fi
-#{server['gateway'] == 'true' ? gateway_ssh_config : node_ssh_config}
-      }, server['ip_address']) do |ok, out|
+#{server['gateway'] == 'true' ? gateway_ssh_config : ""}
+#{node_ssh_config}
+      }, server['ip_address'], 3) do |ok, out|
         if not ok
           puts out
           raise KytoonException, "Failed to copy host file to instance #{server['hostname']}."
